[gd_scene load_steps=6 format=3 uid="uid://d07swamehyfdw"]

[ext_resource type="Script" path="res://scenes/UIes/Level0UI.gd" id="1_1tiug"]
[ext_resource type="FontFile" uid="uid://bpl5e7xyyvirp" path="res://Assets/fonts/VCR_OSD_MONO_1.001.ttf" id="2_7hio0"]
[ext_resource type="Texture2D" uid="uid://bskitcub2g60x" path="res://scenes/worlds/Level0/level0Assets/inventoryImgs/wood.png" id="3_tjiri"]
[ext_resource type="Texture2D" uid="uid://csvp84j7x744a" path="res://scenes/worlds/Level0/level0Assets/inventoryImgs/metal.png" id="4_p8cq4"]
[ext_resource type="Texture2D" uid="uid://ca4tko4nls1ah" path="res://scenes/worlds/Level0/level0Assets/inventoryImgs/stone.png" id="4_sb13i"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -225.0
offset_bottom = -110.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
script = ExtResource("1_1tiug")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_left = 3.0
offset_top = 4.0
offset_right = 64.0
offset_bottom = 20.0

[node name="StoneNumLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 7.0
offset_top = 7.66666
offset_right = 12.0
offset_bottom = 15.6667
theme_override_fonts/font = ExtResource("2_7hio0")
theme_override_font_sizes/font_size = 8
text = "0"

[node name="WoodNumLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 28.6667
offset_top = 7.66666
offset_right = 33.6667
offset_bottom = 15.6667
theme_override_fonts/font = ExtResource("2_7hio0")
theme_override_font_sizes/font_size = 8
text = "0"

[node name="MetalNumLabel" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 50.3333
offset_top = 7.66667
offset_right = 55.3333
offset_bottom = 15.6667
theme_override_fonts/font = ExtResource("2_7hio0")
theme_override_font_sizes/font_size = 8
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WoodSprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(32, 1)
scale = Vector2(0.0329746, 0.0304276)
texture = ExtResource("3_tjiri")

[node name="StoneSprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(11, 1)
scale = Vector2(0.048913, 0.0538194)
texture = ExtResource("4_sb13i")

[node name="MetalSprite2D" type="Sprite2D" parent="Panel"]
position = Vector2(51, 2)
scale = Vector2(0.00989583, 0.010125)
texture = ExtResource("4_p8cq4")
